# rules_python

./: CHANGELOG.md  MODULE.bazel
examples/bzlmod-multi-platform/: MODULE.bazel  bazel-bin  bazel-bzlmod-multi-platform  bazel-multi-platform  bazel-out  bazel-testlogs  requirements.linux_arm64.txt  requirements.linux_x86_64.txt  requirements.macos_arm64.txt
examples/bzlmod/container/: .bazelrc  BUILD.bazel  MODULE.bazel  requirements.in  requirements.txt  server.py
examples/bzlmod/multi-platform/: .bazelrc  BUILD.bazel  MODULE.bazel  main.py  requirements.in  requirements.txt
examples/bzlmod_gazelle_multi_hub/: BUILD.bazel  MODULE.bazel  gazelle_python_jax.yaml  gazelle_python_numpy.yaml  requirements.jax.in  requirements.jax.txt  requirements.numpy.in  requirements.numpy.txt
examples/bzlmod_gazelle_multi_hub/jax/: BUILD.bazel  main.py
examples/bzlmod_gazelle_multi_hub/numpy/: BUILD.bazel  main.py
examples/container/: .bazelrc  MODULE.bazel  requirements.in  requirements.txt
examples/etils/: BUILD.bazel  MODULE.bazel  etils_test.py  requirements.in  requirements.txt
examples/mujoco/: .bazelrc  BUILD.bazel  MODULE.bazel  mujoco-namespace.patch  mujoco_test.py  requirements.in  requirements.txt
examples/oci-container/: BUILD.bazel  MODULE.bazel
python/private/: internal_dev_deps.bzl
python/private/pypi/: extension.bzl  hub_builder.bzl  parse_requirements.bzl  pip_repository.bzl  select_whl.bzl  whl_repo_name.bzl
tests/implicit_namespace_packages/: BUILD.bazel  namespace_packages_test.py
tests/implicit_namespace_packages/testdata/ns-legacy-sub/ns_legacy_sub/: __init__.py
tests/implicit_namespace_packages/testdata/ns-legacy-sub/ns_legacy_sub/subpkg1/: __init__.py  subpkgmod.py
tests/implicit_namespace_packages/testdata/ns-legacy/ns_legacy/: __init__.py
tests/implicit_namespace_packages/testdata/ns-legacy/ns_legacy/subpkg1/: __init__.py  subpkgmod.py
tests/pypi/extension/: extension_tests.bzl
tests/pypi/hub_builder/: hub_builder_tests.bzl
tests/pypi/parse_requirements/: parse_requirements_tests.bzl
