"""MuJoCo example."""

module(
    name = "mujoco-example",
    version = "0.0.1",
)

bazel_dep(name = "rules_python", version = "0.0.0")
bazel_dep(name = "platforms", version = "0.0.11")

local_path_override(
    module_name = "rules_python",
    path = "../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
python.override(minor_mapping = {"3.12": "3.12.7"})

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "requirements.txt",
)


pip.override(
    file = "mujoco-3.3.6-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl",
    patch_strip = 0,
    patches = ["//:mujoco-namespace.patch"],
)
pip.override(
    file = "mujoco-3.3.6-cp312-cp312-manylinux_2_27_aarch64.manylinux_2_28_aarch64.whl",
    patch_strip = 0,
    patches = ["//:mujoco-namespace.patch"],
)
pip.override(
    file = "mujoco-3.3.6-cp312-cp312-macosx_11_0_arm64.whl",
    patch_strip = 0,
    patches = ["//:mujoco-namespace.patch"],
)

use_repo(pip, "pypi")
